# transformer-llm

./: .gitignore  README.md  pyproject.toml
configs/: small.yaml  small_model_tinyshakespeare_char.yaml  small_plus.yaml  tiny.yaml  tiny_postnorm.yaml  tiny_rmsnorm.yaml  tiny_rope.yaml
configs/optional/: experiment_configs.yaml  sft_dolly_bytebpe.yaml  sft_dolly_char.yaml  sft_tinyshakespeare_char.yaml
docs/: architecture-notes.md
reports/: experiments.md
scripts/: download_english_dataset.py  download_sample_dataset.py  download_sft_dataset.py  generate_report_figures.py  generate_text.py  prepare_packed_dataset.py  quantization_bonus.py  test_tokenizer.py  train_model.py  train_sft.py  train_tokenizer.py
src/transformer_llm/: __init__.py
src/transformer_llm/components/: activation.py  attention.py  feedforward.py  normalization.py  positional.py  transformer.py
src/transformer_llm/data/: dataloader.py  dataset.py  packed_dataset.py  sft_dataset.py
src/transformer_llm/generation/: generator.py
src/transformer_llm/model/: config.py  language_model.py
src/transformer_llm/tokenizer/: base.py  bpe.py  byte_bpe.py  loading.py
src/transformer_llm/training/: loss.py  scheduler.py  trainer.py
tests/: test_attention.py  test_generation_module.py  test_integration.py  test_model.py  test_tokenizer.py  test_training_modules.py
