[project]
name = "transformer-llm"
version = "0.1.0"
description = "Decoder-only transformer language model built from scratch in PyTorch"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Chris Andrews", email = "chrisandrews1012@gmail.com" }
]
keywords = ["transformer", "language-model", "pytorch", "deep-learning"]
dependencies = [
    "datasets>=4.8.5",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
    "tokenizers>=0.23.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transformer_llm"]

[project.optional-dependencies]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
